# Boolean-TME-ABM

./: .gitignore  README.md
Boolean_ABM_TME_APPLE/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  animate_ferroptosis.py  cmake_install.cmake  ferroptosis_density_plot.py  genParams.py  plasma_cmap.py  test_run.sh  visualize_ferroptosis.py
Boolean_ABM_TME_APPLE/Model/inc/: CD4Cell.h  CD8Cell.h  CancerCell.h  Cell.h  CellCancer.h  CellMacrophage.h  Environment.h  MacrophageCell.h  ModelUtil.h  Vessel.h
Boolean_ABM_TME_APPLE/Model/phenotype_out/: t_cell_trajec_1.csv  t_cell_trajec_10.csv  t_cell_trajec_100.csv  t_cell_trajec_1001.csv  t_cell_trajec_1004.csv  t_cell_trajec_1005.csv  t_cell_trajec_1007.csv  t_cell_trajec_1009.csv  t_cell_trajec_1017.csv  t_cell_trajec_1018.csv  t_cell_trajec_1019.csv  t_cell_trajec_102.csv  t_cell_trajec_1020.csv  t_cell_trajec_1021.csv  t_cell_trajec_1023.csv  t_cell_trajec_1027.csv  t_cell_trajec_1028.csv  t_cell_trajec_1029.csv  t_cell_trajec_1030.csv  t_cell_trajec_1032.csv  t_cell_trajec_1033.csv  t_cell_trajec_1034.csv  t_cell_trajec_1035.csv  t_cell_trajec_1036.csv  t_cell_trajec_104.csv  t_cell_trajec_1041.csv  t_cell_trajec_1042.csv  t_cell_trajec_1044.csv  t_cell_trajec_1045.csv  t_cell_trajec_1047.csv  t_cell_trajec_105.csv  t_cell_trajec_1050.csv  t_cell_trajec_1052.csv  t_cell_trajec_1053.csv  t_cell_trajec_1054.csv  t_cell_trajec_106.csv  t_cell_trajec_1060.csv  t_cell_trajec_1061.csv  t_cell_trajec_1062.csv  t_cell_trajec_1063.csv  (+5021 more)
Boolean_ABM_TME_APPLE/Model/phenotype_pdl1_out/: t_cell_trajec_1000.csv  (+4820 more)
(+10155 files in other folders)
